force-app/main/default/objects/Account/fields/Operations_OPC_Designation__c.field-meta.xml
<CustomField>
    <fullName>Operations_OPC_Designation__c</fullName>
    <label>Operations OPC Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>