force-app/main/default/objects/Account/fields/Operations_OPC_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Operations_OPC_Direct_Phone__c</fullName>
    <label>Operations OPC Direct Phone</label>
    <type>Phone</type>
</CustomField>