force-app/main/default/objects/Account/fields/Operations_OPC_Email__c.field-meta.xml
<CustomField>
    <fullName>Operations_OPC_Email__c</fullName>
    <label>Operations OPC Email</label>
    <type>Email</type>
</CustomField>