force-app/main/default/objects/Account/fields/Operations_OPC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Operations_OPC_Full_Name__c</fullName>
    <label>Operations OPC Full Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>