force-app/main/default/objects/Account/fields/Oracle_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_Code__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Account Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>