force-app/main/default/objects/Account/fields/Oracle_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Customer_ID__c</fullName>
    <label>BVC Master ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>