force-app/main/default/objects/Account/fields/Original_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Amount__c</fullName>
    <formula>Active_Contract__r.Contract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>