force-app/main/default/objects/Account/fields/Original_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_End_Date__c</fullName>
    <formula>Active_Contract__r.SBQQ__ExpirationDate__c</formula>
    <label>Original Contract End Date</label>
    <type>Date</type>
</CustomField>