force-app/main/default/objects/Account/fields/PAN_Number_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number_of_Entity__c</fullName>
    <label>PAN Number of Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>