force-app/main/default/objects/Account/fields/Point_Of_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Email__c</fullName>
    <description>Point Of Contact&apos;s Email address at a particular address.</description>
    <label>Point Of Contact Email</label>
    <type>Email</type>
</CustomField>