force-app/main/default/objects/Account/fields/Point_Of_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Mobile__c</fullName>
    <description>Point Of Contact Mobile at any particular address.</description>
    <label>Point Of Contact Mobile</label>
    <type>Phone</type>
</CustomField>