force-app/main/default/objects/Account/fields/Previous_Consumed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Consumed_Amount__c</fullName>
    <formula>ST_Previous_Contract__r.Consumed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Consumed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>