force-app/main/default/objects/Account/fields/Previous_Contract_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Business_Type__c</fullName>
    <formula>TEXT(  ST_Previous_Contract__r.Business_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Contract Business Type</label>
    <type>Text</type>
</CustomField>