force-app/main/default/objects/Account/fields/Previous_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Start_Date__c</fullName>
    <formula>ST_Previous_Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Contract Start Date</label>
    <type>Date</type>
</CustomField>