force-app/main/default/objects/Account/fields/Previous_of_Contract_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Previous_of_Contract_Consumption__c</fullName>
    <formula>ST_Previous_Contract__r.of_Contract_Consumption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous % of Contract Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>