force-app/main/default/objects/Account/fields/Previous_Original_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Original_Contract_End_Date__c</fullName>
    <formula>ST_Previous_Contract__r.Original_Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Original Contract End Date</label>
    <type>Date</type>
</CustomField>