force-app/main/default/objects/Account/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>