force-app/main/default/objects/Account/fields/Primary_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Primary_GSTIN__c</fullName>
    <formula>Primary_Address__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary GSTIN</label>
    <type>Text</type>
</CustomField>