force-app/main/default/objects/Account/fields/Primary_Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>