force-app/main/default/objects/Account/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>This will be the rating received from KYC agency</description>
    <inlineHelpText>This will be the rating received from KYC agency.</inlineHelpText>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>