force-app/main/default/objects/Account/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <defaultValue>$RecordType.Id</defaultValue>
    <label>RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>