force-app/main/default/objects/Account/fields/Registered_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Registered_AddressLine2__c</fullName>
    <label>Registered AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>