force-app/main/default/objects/Account/fields/Registered_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_City__c</fullName>
    <description>To capture city for registered address.</description>
    <label>Registered City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>