force-app/main/default/objects/Account/fields/Registered_Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Complete_Address__c</fullName>
    <formula>Registered_Street__c+&apos; &apos;+Registered_AddressLine2__c+&apos; &apos;+IF(ISBLANK(Registered_Zip_Postal_Code__c)||Registered_Zip_Postal_Code__c=0,&apos;&apos;,TEXT(Registered_Zip_Postal_Code__c))+&apos; &apos;+Registered_City__c+&apos; &apos;+Registered_State__c+&apos; &apos;+Registered_Country__c+&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Complete Address</label>
    <type>Text</type>
</CustomField>