force-app/main/default/objects/Account/fields/Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Country__c</fullName>
    <description>To capture country for registered address.</description>
    <label>Registered Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>