force-app/main/default/objects/Account/fields/Registered_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_State__c</fullName>
    <description>To capture state for registered address.</description>
    <label>Registered State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>