force-app/main/default/objects/Account/fields/Registered_Street__c.field-meta.xml
<CustomField>
    <fullName>Registered_Street__c</fullName>
    <description>To capture street for registered address.</description>
    <label>Registered AddressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>