force-app/main/default/objects/Account/fields/Registered_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Zip_Postal_Code__c</fullName>
    <description>To capture zip/postal code for registered address.</description>
    <label>Registered Zip/Postal Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>