force-app/main/default/objects/Account/fields/Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Party</label>
    <type>Checkbox</type>
</CustomField>