force-app/main/default/objects/Account/fields/Remaining_Amount_BATH__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount_BATH__c</fullName>
    <formula>BATH_Contract__r.Balance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>