force-app/main/default/objects/Account/fields/Requested_ACR_Balance_to_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Requested_ACR_Balance_to_Carry_Forward__c</fullName>
    <label>Requested ACR Balance to Carry Forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>