force-app/main/default/objects/Account/fields/Requested_Contract_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contract_Extension_Date__c</fullName>
    <label>Requested Contract Extension Date</label>
    <type>Date</type>
</CustomField>