force-app/main/default/objects/Account/fields/Sales_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>