force-app/main/default/objects/Account/fields/Secondary_Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>