force-app/main/default/objects/Account/fields/Self_Onboard_New__c.field-meta.xml
<CustomField>
    <fullName>Self_Onboard_New__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Onboard New</label>
    <type>Checkbox</type>
</CustomField>