force-app/main/default/objects/Account/fields/Self_onboarding_Existing__c.field-meta.xml
<CustomField>
    <fullName>Self_onboarding_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self onboarding Existing</label>
    <type>Checkbox</type>
</CustomField>