force-app/main/default/objects/Account/fields/Self_onboarding_Existing_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Self_onboarding_Existing_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag</description>
    <label>Self onboarding Existing Rejected</label>
    <type>Checkbox</type>
</CustomField>