force-app/main/default/objects/Account/fields/Shipping_Address_Fromula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Fromula__c</fullName>
    <formula>ShippingStreet +&apos;, &apos;+ ShippingCity +&apos;, &apos; + ShippingState +&apos;, &apos; + ShippingCountry +&apos;, &apos;+ ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Fromula</label>
    <type>Text</type>
</CustomField>