force-app/main/default/objects/Account/fields/ST_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Contract_Expiry_Date__c</fullName>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>