force-app/main/default/objects/Account/fields/ST_Customer_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>ST_Customer_Owner_Name__c</fullName>
    <formula>Owner.FirstName  + &apos; &apos; +  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ST Customer Owner Name</label>
    <type>Text</type>
</CustomField>