force-app/main/default/objects/Account/fields/ST_Latest_Activated_Order_Contract__c.field-meta.xml
<CustomField>
    <fullName>ST_Latest_Activated_Order_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Activated Order(Contract)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>