force-app/main/default/objects/Account/fields/ST_Latest_Active_ACR_Package__c.field-meta.xml
<CustomField>
    <fullName>ST_Latest_Active_ACR_Package__c</fullName>
    <label>Latest Active ACR Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_ACR_Package_Type</valueSetName>
    </valueSet>
</CustomField>