force-app/main/default/objects/Account/fields/ST_Latest_Active_ACR_Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>ST_Latest_Active_ACR_Package_Amount__c</fullName>
    <label>Latest Active ACR Package Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>