force-app/main/default/objects/Account/fields/ST_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>ST_Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customers (Previous Contract)</relationshipLabel>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>