force-app/main/default/objects/Account/fields/ST_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>ST_Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Pricing_Type</valueSetName>
    </valueSet>
</CustomField>