force-app/main/default/objects/Account/fields/ST_Total_Consumable_ACR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ST_Total_Consumable_ACR_Amount__c</fullName>
    <label>Total Consumable ACR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>