force-app/main/default/objects/Account/fields/Stitch_Profile_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Stitch_Profile_API_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stitch Profile API Status</label>
    <type>Checkbox</type>
</CustomField>