force-app/main/default/objects/Account/fields/TDS_Applicable__c.field-meta.xml
<CustomField>
    <fullName>TDS_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TDS Applicable</label>
    <type>Checkbox</type>
</CustomField>