force-app/main/default/objects/Account/fields/test3455__c.field-meta.xml
<CustomField>
    <fullName>test3455__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test3455</label>
    <type>Checkbox</type>
</CustomField>