force-app/main/default/objects/Account/fields/To_Pay_Shipment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>To_Pay_Shipment_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>To Pay Shipment Allowed</label>
    <type>Checkbox</type>
</CustomField>