force-app/main/default/objects/Account/fields/Total_Number_Of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Opportunities__c</fullName>
    <label>Total Number Of Deals</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>