force-app/main/default/objects/Account/fields/Total_Parcels_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Total_Parcels_Shipped__c</fullName>
    <formula>Active_Contract__r.Total_Packages_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parcels Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>