force-app/main/default/objects/Account/fields/Total_Shipment_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipment_Value__c</fullName>
    <formula>Active_Contract__r.Total_Shipment_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Shipment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>