force-app/main/default/objects/Account/fields/Type_Of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Customer__c</fullName>
    <label>Type Of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consignee</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>