force-app/main/default/objects/Account/fields/wk_exo__Clone_Pone_No__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Clone_Pone_No__c</fullName>
    <label>Masked Phone Number</label>
    <type>Phone</type>
</CustomField>