force-app/main/default/objects/Account/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <description>Record Type for Domestic Customers.</description>
    <label>Billing</label>
</RecordType>