force-app/main/default/objects/Account/recordTypes/Consignee.recordType-meta.xml
<RecordType>
    <fullName>Consignee</fullName>
    <active>false</active>
    <description>Record Type for Consignee</description>
    <label>Consignee</label>
</RecordType>