force-app/main/default/objects/Account/recordTypes/New_Customer_Quick.recordType-meta.xml
<RecordType>
    <fullName>New_Customer_Quick</fullName>
    <active>true</active>
    <label>Quick Billing</label>
</RecordType>