force-app/main/default/objects/Account/recordTypes/Quick_Shipping.recordType-meta.xml
<RecordType>
    <fullName>Quick_Shipping</fullName>
    <active>true</active>
    <label>Quick Shipping</label>
</RecordType>