force-app/main/default/objects/Account/recordTypes/Shipping.recordType-meta.xml
<RecordType>
    <fullName>Shipping</fullName>
    <active>true</active>
    <description>Record Type for Shipping Customers.</description>
    <label>Shipping</label>
</RecordType>