force-app/main/default/objects/Account/recordTypes/Shipping_Account_Community.recordType-meta.xml
<RecordType>
    <fullName>Shipping_Account_Community</fullName>
    <active>true</active>
    <description>Record type for Shipping Accounts for Community.</description>
    <label>Shipping Account Community</label>
</RecordType>