force-app/main/default/objects/Account/validationRules/Billing_user_should_not_edit_the_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_user_should_not_edit_the_record</fullName>
    <active>false</active>
    <description>Billing user should not edit the record</description>
    <errorConditionFormula>AND(NOT(ISNEW()),
OR(

ISCHANGED(Invoice_Batch__c),
ISCHANGED(Customer_Category_Static__c),
ISCHANGED(Customer_Status__c)
),
NOT($Profile.Name=&apos;Billing Admin&apos;),NOT($Profile.Name=&apos;Billing Head&apos;))</errorConditionFormula>
    <errorMessage>You cannot edit these fields- Customer Category (Static) , Billing Frequency , Invoice Batch , Customer Activity Status</errorMessage>
</ValidationRule>